Module 7/m07a06dates-handout/grading/2024-10-24-14-11-59/compile.err
Test03.java:14: error: cannot find symbol
        System.out.println("There are " + d1.daysUntil(d2) + " day(s) from Date(1998, 6, 19) to Date(1998, 6, 20)");
                                            ^
  symbol:   method daysUntil(Date)
  location: variable d1 of type Date
Test03.java:15: error: cannot find symbol
        System.out.println("There are " + d1.daysUntil(d3) + " day(s) from Date(1998, 6, 19) to Date(1998, 7, 1)");
                                            ^
  symbol:   method daysUntil(Date)
  location: variable d1 of type Date
Test03.java:16: error: cannot find symbol
        System.out.println("There are " + d1.daysUntil(d4) + " day(s) from Date(1998, 6, 19) to Date(1999, 1, 1)");
                                            ^
  symbol:   method daysUntil(Date)
  location: variable d1 of type Date
Test03.java:17: error: cannot find symbol
        System.out.println("There are " + d5.daysUntil(d6) + " day(s) from Date(2003, 1, 1) to Date(2004, 1, 1)");
                                            ^
  symbol:   method daysUntil(Date)
  location: variable d5 of type Date
Test03.java:18: error: cannot find symbol
        System.out.println("There are " + d6.daysUntil(d7) + " day(s) from Date(2004, 1, 1) to Date(2005, 1, 1)");
                                            ^
  symbol:   method daysUntil(Date)
  location: variable d6 of type Date
Test03.java:19: error: cannot find symbol
        System.out.println("There are " + d7.daysUntil(d8) + " day(s) from Date(2005, 1, 1) to Date(2008, 8, 8)");
                                            ^
  symbol:   method daysUntil(Date)
  location: variable d7 of type Date
Test03.java:20: error: cannot find symbol
        System.out.println("There are " + d8.daysUntil(d8) + " day(s) from Date(2008, 8, 8) to Date(2008, 8, 8)");
                                            ^
  symbol:   method daysUntil(Date)
  location: variable d8 of type Date
7 errors
